add new group nestable listener
add new group nestable listener

--- a/index.html
+++ b/index.html
@@ -107,9 +107,9 @@
 														<div class="dd3-content">
 															<textarea class="formtextInput singleline" rows="2">問題描述(單欄位)</textarea>
 														</div>
-														<!-- <div class="answer insidefiled single">
+														<div class="answer insidefiled single">
 															<textarea class="formtextInput singleinput " rows="1" placeholder="請輸入你的內容..."></textarea>
-														</div> -->
+														</div>
 													</li>
 													<li data-type='0' data-attribute=1 data-sequence=1 class="dd-item">
 														<div class="icon-btn icon-del">
@@ -119,9 +119,9 @@
 														<div class="dd3-content">
 															<textarea class="formtextInput singleline" rows="2">問題描述(多欄位)</textarea>
 														</div>
-														<!-- <div class="answer insidefiled">
+														<div class="answer insidefiled">
 															<textarea class="formtextInput singleinput " rows="4" placeholder="請輸入你的內容..."></textarea>
-														</div> -->
+														</div>
 													</li>
 													<li data-type='0' data-attribute=3 data-sequence=1 class="dd-item">
 														<div class="icon-btn icon-del">
@@ -216,9 +216,9 @@
 														<div class="dd3-content">
 															<textarea class="formtextInput singleline" rows="2">單欄位輸入</textarea>
 														</div>
-														<!-- <div class="answer insidefiled single">
+														<div class="answer insidefiled single">
 															<textarea class="formtextInput singleinput " rows="1" placeholder="請輸入你的內容..."></textarea>
-														</div> -->
+														</div>
 													</li>
 													<li class="dd-item" data-type='0' data-attribute=1 data-sequence=1>
 														<div class="icon-btn icon-del">
@@ -228,9 +228,9 @@
 														<div class="dd3-content">
 															<textarea class="formtextInput singleline" rows="2">多欄位輸入</textarea>
 														</div>
-														<!-- <div class="answer insidefiled">
+														<div class="answer insidefiled">
 															<textarea class="formtextInput singleinput " rows="4" placeholder="請輸入你的內容..."></textarea>
-														</div> -->
+														</div>
 													</li>
 													<li class="dd-item" data-type='0' data-attribute=4 data-sequence=1>
 														<div class="icon-btn icon-del">
