--- a/index.html
+++ b/index.html
@@ -23,19 +23,19 @@
 			<div class="setting">
 				<div class="settingwrap">
 					<!-- <div id="group" class="btnstyle"><a href="#">題組</a></div> -->
-					<div id="preview" class="btnstyle"><a href="#">預覽</a></div>
-					<div id="submit" class="btnstyle"><a href="#">送出</a></div>
+					<div id="preview" class="btnstyle"><a href="#">Preview</a></div>
+					<div id="submit" class="btnstyle"><a href="#">Subnite(exportJson)</a></div>
 				</div>
 			</div>
-			<!-- <div class="tooling">
+			<div class="tooling">
 				<div class="toolingwrap">
-					<div id="sigle" class="dd-new-item btnstyle">單欄位輸入</div>
-					<div id="txtar" class="dd-new-item btnstyle">多欄位輸入</div>
-					<div id="radio" class="dd-new-item btnstyle">單選題型</div>
-					<div id="check" class="dd-new-item btnstyle">多選題型</div>
-					<div id="liker" class="dd-new-item btnstyle">李克特量表</div>
+					<div id="sigle" class="dd-new-item btnstyle">SingleLine</div>
+					<div id="txtar" class="dd-new-item btnstyle">Paragraph</div>
+					<div id="radio" class="dd-new-item btnstyle">RadioSelection</div>
+					<div id="check" class="dd-new-item btnstyle">CheckBoxes</div>
+					<div id="liker" class="dd-new-item btnstyle">likertScale</div>
 				</div>
-			</div> -->
+			</div>
 		</header>
 		<article class="content">
 				<form action="" method="post" id="form1">
@@ -44,56 +44,56 @@
 							<section class="formheader">
 								<div class="textarea">
 									<h1 class="formtitle">
-										<input class="formtextInput titletextarea" rows="1" autofocus value="問卷名稱">
+										<input class="formtextInput titletextarea" rows="1" autofocus value="Quizs Name">
 									</h1>
 									<div class="hrline"></div>
 								</div>
 								<div class="textarea">
 									<h3 id="quizdescip" class=" formsubtitle">
-										<textarea class="formtextInput subtitletextarea" rows="7">問卷說明</textarea></h3>
+										<textarea class="formtextInput subtitletextarea" rows="7">Discraption</textarea></h3>
 									<div class="hrline"></div>
 									<h3 id="footer" class=" formsubtitle">
-										<textarea class="formtextInput subtitletextarea" rows="7">結尾謝詞</textarea></h3>
+										<textarea class="formtextInput subtitletextarea" rows="7">FooterDisc</textarea></h3>
 									<div class="hrline"></div>
 								</div>
 								<div data-group_title="個人資料" data-group_seq=0 data-is_base_info=true class="group boxsize denysele">
 									<div>
-										<label for="persondetail">是否填寫個資：</label>
-										<input type="radio" class="formtextInput"  name="quiztype" value="anonymous" checked>匿名資料
-										<input type="radio" class="formtextInput"  name="quiztype" value="person">填寫資料
+										<label for="persondetail">Provide personal Detail：</label>
+										<input type="radio" class="formtextInput"  name="quiztype" value="anonymous" checked>Anonymous
+										<input type="radio" class="formtextInput"  name="quiztype" value="person">Personal
 									</div>
 									<div class="table tablehide">
 										<!-- <div class="persondetail caption">身分所需欄位</div> -->
 										<div class="tr">
 											<div class="td checkbox"></div>
-											<div class="td">基本資料問題</div>
-											<div class="td">填答類型</div>
+											<div class="td">Personal Detail</div>
+											<div class="td">Type of Detail</div>
 										</div>
 										<div class="tr">
 											<div class="td checkbox"><input type="checkbox"></div>
-											<div class="td">姓名</div>
-											<div class="td">文字輸入</div>
+											<div class="td">Name</div>
+											<div class="td">InputBox</div>
 										</div>
 										<div class="tr">
 											<div class="td checkbox"><input type="checkbox"></div>
-											<div class="td">電子郵件</div>
-											<div class="td">文字輸入</div>
+											<div class="td">E-mail</div>
+											<div class="td">InputBox</div>
 										</div>
 										<div class="tr">
 											<div class="td checkbox"><input type="checkbox"></div>
-											<div class="td">性別</div>
-											<div class="td">單選項</div>
+											<div class="td">Genger</div>
+											<div class="td">Radiobox</div>
 										</div>
 									</div>
 								</div>
 							</section>
-							<h3>問卷設定</h3>
+							<h3>Question Field</h3>
 							<div id="root" class="dd">
 								<ol class="dd-list">
 									<li class="dd-item">
 										<section data-group_seq=0 data-is_base_info=true class="group">
 											<div class="hgtitle">
-												<h1 class="dd-handle"><input class="formtextInput titletextarea" rows="1" autofocus value="題組名稱"></h1>
+												<h1 class="dd-handle"><input class="formtextInput titletextarea" rows="1" autofocus value="Group"></h1>
 												<div class="icon-btn icon-del">
 													<i class="material-icons icon-small icon-color">delete</i>
 												</div>
@@ -106,10 +106,10 @@
 														</div>
 														<div class="dd-handle dd3-handle">Drag</div>
 														<div class="dd3-content">
-															<textarea class="formtextInput singleline" rows="2">問題描述(單欄位)</textarea>
+															<textarea class="formtextInput singleline" rows="2">Question(single-line)</textarea>
 														</div>
 														<div class="answer insidefiled single">
-															<textarea class="formtextInput singleinput " rows="1" placeholder="請輸入你的內容..."></textarea>
+															<textarea class="formtextInput singleinput " rows="1" placeholder="comments..."></textarea>
 														</div>
 													</li>
 													<li data-type='0' data-attribute=1 data-sequence=1 class="dd-item">
@@ -118,10 +118,10 @@
 														</div>
 														<div class="dd-handle dd3-handle">Drag</div>
 														<div class="dd3-content">
-															<textarea class="formtextInput singleline" rows="2">問題描述(多欄位)</textarea>
+															<textarea class="formtextInput singleline" rows="2">Question(muti-line)</textarea>
 														</div>
 														<div class="answer insidefiled">
-															<textarea class="formtextInput singleinput " rows="4" placeholder="請輸入你的內容..."></textarea>
+															<textarea class="formtextInput singleinput " rows="4" placeholder="comments..."></textarea>
 														</div>
 													</li>
 													<li data-type='0' data-attribute=3 data-sequence=1 class="dd-item">
@@ -130,7 +130,7 @@
 														</div>
 														<div class="dd-handle dd3-handle">Drag</div>
 														<div class="dd3-content">
-															<textarea class="formtextInput singleline" rows="4">問題描述(多選題)</textarea>
+															<textarea class="formtextInput singleline" rows="4">Question(checkbox)</textarea>
 														</div>														
 														<div class="answer insidefiled">
 															<div class="answerwrap">
@@ -140,8 +140,8 @@
 																<div class="icon-add answer-add">
 																	<i class="material-icons icon-small icon-color">create</i>
 																</div>
-																<label for="answer" class="text answer-title">選項: </label>
-																<input class="select answer-input" type="text" placeholder="請輸入你的選項...">
+																<label for="answer" class="text answer-title">options: </label>
+																<input class="select answer-input" type="text" placeholder="create your selection here...">
 															</div>
 															<div class="answerwrap">
 																<div class="icon-del answer-del">
@@ -150,8 +150,8 @@
 																<div class="icon-add answer-add">
 																	<i class="material-icons icon-small icon-color">create</i>
 																</div>
-																<label for="answer" class="text answer-title">選項: </label>
-																<input class="select answer-input" type="text" placeholder="請輸入你的選項...">
+																<label for="answer" class="text answer-title">options: </label>
+																<input class="select answer-input" type="text" placeholder="create your selection here...">
 															</div>
 															<div class="answerwrap">
 																<div class="icon-del answer-del">
@@ -160,8 +160,8 @@
 																<div class="icon-add answer-add">
 																	<i class="material-icons icon-small icon-color">create</i>
 																</div>
-																<label for="answer" class="text answer-title">選項: </label>
-																<input class="select answer-input" type="text" placeholder="請輸入你的選項...">
+																<label for="answer" class="text answer-title">options: </label>
+																<input class="select answer-input" type="text" placeholder="create your selection here...">
 															</div>
 															<div class="answerwrap">
 																<div class="icon-del answer-del">
@@ -170,8 +170,8 @@
 																<div class="icon-add answer-add">
 																	<i class="material-icons icon-small icon-color">create</i>
 																</div>
-																<label for="answer" class="text answer-title">選項: </label>
-																<input class="select answer-input" type="text" placeholder="請輸入你的選項...">
+																<label for="answer" class="text answer-title">options: </label>
+																<input class="select answer-input" type="text" placeholder="create your selection here...">
 															</div>
 														</div>
 													</li>
@@ -181,16 +181,16 @@
 														</div>
 														<div class="dd-handle dd3-handle">Drag</div>
 														<div class="dd3-content">
-															<textarea class="formtextInput singleline" rows="4">問題描述(李克特量表)</textarea>
+															<textarea class="formtextInput singleline" rows="4">Question(likertScale)</textarea>
 														</div>
 														<div class="answer insidefiled">
 															<div class="answerwrap">
-																<label for="answer" class="text answer-title">類型: </label>
+																<label for="answer" class="text answer-title">Type: </label>
 																<select name="favorate" class="select answer-input">
-																	<option value="滿意">滿意</option>
-																	<option value="贊成">贊成</option>
-																	<option value="同意">同意</option>
-																	<option value="喜歡">喜歡</option>
+																	<option value="Agree">Agree</option>
+																	<option value="Like">Like</option>
+																	<option value="Approval">Approval</option>
+																	<option value="Satisfacty">Satisfacty</option>
 																</select>
 															</div>
 														</div>
@@ -202,7 +202,7 @@
 									<li class="dd-item">
 										<section data-group_seq=0 data-is_base_info=true class="group">
 											<div class="hgtitle">
-												<h1 class="dd-handle"><input class="formtextInput titletextarea" rows="1" autofocus value="題組名稱"></h1>
+												<h1 class="dd-handle"><input class="formtextInput titletextarea" rows="1" autofocus value="Group"></h1>
 												<div class="icon-btn icon-del">
 													<i class="material-icons icon-small icon-color">delete</i>
 												</div>
@@ -215,10 +215,10 @@
 														</div>
 														<div class="dd-handle dd3-handle">Drag</div>
 														<div class="dd3-content">
-															<textarea class="formtextInput singleline" rows="2">單欄位輸入</textarea>
+															<textarea class="formtextInput singleline" rows="2">Question(single-line)</textarea>
 														</div>
 														<div class="answer insidefiled single">
-															<textarea class="formtextInput singleinput " rows="1" placeholder="請輸入你的內容..."></textarea>
+															<textarea class="formtextInput singleinput " rows="1" placeholder="comments..."></textarea>
 														</div>
 													</li>
 													<li class="dd-item" data-type='0' data-attribute=1 data-sequence=1>
@@ -227,10 +227,10 @@
 														</div>
 														<div class="dd-handle dd3-handle">Drag</div>
 														<div class="dd3-content">
-															<textarea class="formtextInput singleline" rows="2">多欄位輸入</textarea>
+															<textarea class="formtextInput singleline" rows="2">Question(muti-line)</textarea>
 														</div>
 														<div class="answer insidefiled">
-															<textarea class="formtextInput singleinput " rows="4" placeholder="請輸入你的內容..."></textarea>
+															<textarea class="formtextInput singleinput " rows="4" placeholder="comments..."></textarea>
 														</div>
 													</li>
 													<li class="dd-item" data-type='0' data-attribute=4 data-sequence=1>
@@ -239,16 +239,16 @@
 														</div>
 														<div class="dd-handle dd3-handle">Drag</div>
 														<div class="dd3-content">
-															<textarea class="formtextInput singleline" rows="4">李克特量表</textarea>
+															<textarea class="formtextInput singleline" rows="4">Question(likertScale)</textarea>
 														</div>														
 														<div class="answer insidefiled">
 															<div class="answerwrap">
-																<label for="answer" class="text answer-title">類型: </label>
+																<label for="answer" class="text answer-title">Type: </label>
 																<select name="favorate" class="select answer-input">
-																	<option value="滿意">滿意</option>
-																	<option value="贊成">贊成</option>
-																	<option value="同意">同意</option>
-																	<option value="喜歡">喜歡</option>
+																	<option value="Agree">Agree</option>
+																	<option value="Like">Like</option>
+																	<option value="Approval">Approval</option>
+																	<option value="Satisfacty">Satisfacty</option>
 																</select>
 															</div>
 														</div>
@@ -265,12 +265,12 @@
 		</article>
 	</div>
 	<aside id="sidebar" class="sidebar showout">
-		<div id="groupside" class="sidebarpos">題組</div>
-		<div id="sigleside" class="sidebarpos">單欄位輸入</div>
-		<div id="txtarside" class="sidebarpos">多欄位輸入</div>
-		<div id="radioside" class="sidebarpos">單選題型</div>
-		<div id="checkside" class="sidebarpos">多選題型</div>
-		<div id="likerside" class="sidebarpos">李克特量表</div>
+		<div id="groupside" class="sidebarpos">Group</div>
+		<div id="sigleside" class="sidebarpos">SingleLine</div>
+		<div id="txtarside" class="sidebarpos">Paragraph</div>
+		<div id="radioside" class="sidebarpos">RadioSelection</div>
+		<div id="checkside" class="sidebarpos">CheckBoxes</div>
+		<div id="likerside" class="sidebarpos">likertScale</div>
 	</aside>
 	<script src="https://dl.dropboxusercontent.com/u/50502234/jquery.min.js"></script>
 	<script src="js/classie.js"></script>
