--- a/src/index.html
+++ b/src/index.html
@@ -14,8 +14,10 @@
 	<meta property="og:description" content="Simple Quesionnaire table by HTML + jQuery" />
 
 	<title></title>
+	<!-- build:css css/style.min.css -->
 	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 	<link rel="stylesheet" href="style/quizstyle.css">
+	<!--endbuild-->
 </head>
 <body>
 	<div class="container">
@@ -272,9 +274,11 @@
 		<div id="checkside" class="sidebarpos">CheckBoxes</div>
 		<div id="likerside" class="sidebarpos">likertScale</div>
 	</aside>
-	<script src="https://dl.dropboxusercontent.com/u/50502234/jquery.min.js"></script>
+	<!-- build:js js/main.min.js -->
+	<script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
 	<script src="js/classie.js"></script>
 	<script src="js/nestable.js"></script>
 	<script src="js/quizjs.js"></script>
+	<!--endbuild-->
 </body>
 </html>
