update quiz project
update quiz project

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<title></title>
 	<!-- build:css css/style.min.css -->
 	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-	<link rel="stylesheet" href="style/quizstyle.css">
+	<link rel="stylesheet" href="./dist/style.min.css">
 	<!--endbuild-->
 </head>
 <body>
